crates/python_parser/tests/snapshots/invalid_syntax@expressions__dict__missing_closing_brace_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/dict/missing_closing_brace_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..10,
        body: [
            Expr(
                ExprStmt {
                    range: 0..10,
                    value: Dict(
                        DictExpr {
                            range: 0..10,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: BinOp(
                                        BinOpExpr {
                                            range: 5..10,
                                            left: NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 5..6,
                                                    value: Int(
                                                        1,
                                                    ),
                                                },
                                            ),
                                            op: Add,
                                            right: NumberLiteral(
                                                NumberLiteralExpr {
                                                    range: 9..10,
                                                    value: Int(
                                                        2,
                                                    ),
                                                },
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | {x:
2 | 
3 | 1 + 2
  |       Syntax Error: unexpected EOF while parsing
  |
