crates/python_parser/tests/snapshots/invalid_syntax@expressions__dict__missing_closing_brace_2.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/dict/missing_closing_brace_2.py
---
## AST

```
Module(
    ModModule {
        range: 0..27,
        body: [
            Expr(
                ExprStmt {
                    range: 0..6,
                    value: Dict(
                        DictExpr {
                            range: 0..6,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 1..2,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: NumberLiteral(
                                        NumberLiteralExpr {
                                            range: 4..5,
                                            value: Int(
                                                1,
                                            ),
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            FunctionDef(
                FunctionDefStmt {
                    range: 8..27,
                    is_async: false,
                    decorator_list: [],
                    name: Identifier {
                        id: Name("foo"),
                        range: 12..15,
                    },
                    type_params: None,
                    parameters: Parameters {
                        range: 15..17,
                        posonlyargs: [],
                        args: [],
                        vararg: None,
                        kwonlyargs: [],
                        kwarg: None,
                    },
                    returns: None,
                    body: [
                        Pass(
                            PassStmt {
                                range: 23..27,
                            },
                        ),
                    ],
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | {x: 1,
  |       ^ Syntax Error: Expected '}', found newline
2 | 
3 | def foo():
4 |     pass
  |
