crates/python_parser/tests/snapshots/invalid_syntax@expressions__dict__named_expression_0.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/dict/named_expression_0.py
---
## AST

```
Module(
    ModModule {
        range: 0..84,
        body: [
            Expr(
                ExprStmt {
                    range: 55..77,
                    value: Dict(
                        DictExpr {
                            range: 55..77,
                            items: [
                                DictItem {
                                    key: Some(
                                        Named(
                                            NamedExpr {
                                                range: 56..62,
                                                target: Name(
                                                    NameExpr {
                                                        range: 56..57,
                                                        id: Name("x"),
                                                        ctx: Store,
                                                    },
                                                ),
                                                value: NumberLiteral(
                                                    NumberLiteralExpr {
                                                        range: 61..62,
                                                        value: Int(
                                                            1,
                                                        ),
                                                    },
                                                ),
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 64..65,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 67..68,
                                                id: Name("z"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 68..68,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 72..73,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 75..76,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 79..84,
                    value: BinOp(
                        BinOpExpr {
                            range: 79..84,
                            left: Name(
                                NameExpr {
                                    range: 79..80,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 83..84,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expression not allowed in key
2 | 
3 | {x := 1: y, z := 2: a}
  |  ^^^^^^ Syntax Error: Unparenthesized named expression cannot be used here
4 | 
5 | x + y
  |


  |
1 | # Unparenthesized named expression not allowed in key
2 | 
3 | {x := 1: y, z := 2: a}
  |               ^^ Syntax Error: Expected ':', found ':='
4 | 
5 | x + y
  |
