crates/python_parser/tests/snapshots/invalid_syntax@expressions__dict__named_expression_1.py.snap
---
source: crates/python_parser/tests/fixtures.rs
input_file: crates/python_parser/resources/invalid/expressions/dict/named_expression_1.py
---
## AST

```
Module(
    ModModule {
        range: 0..86,
        body: [
            Expr(
                ExprStmt {
                    range: 57..79,
                    value: Dict(
                        DictExpr {
                            range: 57..79,
                            items: [
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 58..59,
                                                id: Name("x"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 61..62,
                                            id: Name("y"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 66..67,
                                                value: Int(
                                                    1,
                                                ),
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 67..67,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        Name(
                                            NameExpr {
                                                range: 69..70,
                                                id: Name("z"),
                                                ctx: Load,
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 72..73,
                                            id: Name("a"),
                                            ctx: Load,
                                        },
                                    ),
                                },
                                DictItem {
                                    key: Some(
                                        NumberLiteral(
                                            NumberLiteralExpr {
                                                range: 77..78,
                                                value: Int(
                                                    2,
                                                ),
                                            },
                                        ),
                                    ),
                                    value: Name(
                                        NameExpr {
                                            range: 78..78,
                                            id: Name(""),
                                            ctx: Invalid,
                                        },
                                    ),
                                },
                            ],
                        },
                    ),
                },
            ),
            Expr(
                ExprStmt {
                    range: 81..86,
                    value: BinOp(
                        BinOpExpr {
                            range: 81..86,
                            left: Name(
                                NameExpr {
                                    range: 81..82,
                                    id: Name("x"),
                                    ctx: Load,
                                },
                            ),
                            op: Add,
                            right: Name(
                                NameExpr {
                                    range: 85..86,
                                    id: Name("y"),
                                    ctx: Load,
                                },
                            ),
                        },
                    ),
                },
            ),
        ],
    },
)
```
## Errors

  |
1 | # Unparenthesized named expression not allowed in value
2 | 
3 | {x: y := 1, z: a := 2}
  |       ^^ Syntax Error: Expected ',', found ':='
4 | 
5 | x + y
  |


  |
1 | # Unparenthesized named expression not allowed in value
2 | 
3 | {x: y := 1, z: a := 2}
  |           ^ Syntax Error: Expected ':', found ','
4 | 
5 | x + y
  |


  |
1 | # Unparenthesized named expression not allowed in value
2 | 
3 | {x: y := 1, z: a := 2}
  |                  ^^ Syntax Error: Expected ',', found ':='
4 | 
5 | x + y
  |


  |
1 | # Unparenthesized named expression not allowed in value
2 | 
3 | {x: y := 1, z: a := 2}
  |                      ^ Syntax Error: Expected ':', found '}'
4 | 
5 | x + y
  |
